[package]
name = "bevy_ballistic"
version = "0.4.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
repository = "https://github.com/rustunit/bevy_ballistic"
keywords = ["bevy", "gamedev", "math"]
description = "Simple Bevy math functions to calculate projectile launch angles to hit a specific target."

[dependencies]
bevy_math = "0.16.0"

[dev-dependencies]
avian3d = "0.3"
bevy = "0.16"
bevy_egui = "0.34"
bevy_flycam = "0.16"
bevy_firework = "0.7"
