[package]
name = "bevy_ballistic"
version = "0.5.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
repository = "https://github.com/rustunit/bevy_ballistic"
keywords = ["bevy", "gamedev", "math"]
description = "Simple Bevy math functions to calculate projectile launch angles to hit a specific target."

[dependencies]
bevy_math = "0.17"

[dev-dependencies]
avian3d = { git="https://github.com/Jondolf/avian.git", branch = "main" }
bevy = "0.17"
bevy_egui = "0.37"
bevy_flycam = { git="https://github.com/stillonearth/bevy_flycam.git", rev = "aee5ff6" }
# bevy_firework = "0.7"
